--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   url_launcher: ^6.3.2
   just_audio: ^0.9.41
   vibration: ^2.0.0
+  page_flip: ^0.2.5+1
 
 dev_dependencies:
   flutter_test:
